# diskette

./: .gitignore  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
diskette/: __init__.py  apps.py  choices.py  exceptions.py  settings.py  urls.py
diskette/admin/: __init__.py  actions.py  dump.py  filters.py  key.py
diskette/contrib/: django_configuration.py
diskette/contrib/composer/: collectors.py  processors.py
diskette/core/: abstracts.py  applications.py  defaults.py  dumper.py  loader.py  manager.py  models.py  processes.py  serializers.py  storages.py
diskette/core/applications/: __init__.py  definitions.py  lookupstore.py  resolver.py  store.py
diskette/core/handlers/: __init__.py  base.py  dump.py  load.py
diskette/core/serializers/: __init__.py  dumpdata.py  loaddata.py
diskette/dump/: manager.py  models.py  serializers.py
diskette/factories/: __init__.py  dump.py  key.py
diskette/forms/: __init__.py  dump.py  key.py
diskette/management/commands/: diskette_apps.py  diskette_dump.py  diskette_load.py  polymorphic_dumpdata.py
diskette/migrations/: 0001_initial.py
diskette/models/: __init__.py  dump.py  key.py
diskette/utils/: factories.py  filesystem.py  hashs.py  http.py  lists.py  loggers.py  tests.py  versionning.py
diskette/views/: __init__.py  admin_mixins.py  dump.py
docs/: admin.rst  appdef.rst  basic_sample.rst  command_parser.py  commands.rst  conf.py  development.rst  drain.rst  index.rst  install.rst  overview.rst  settings.rst  sphinx_reload.py  storagedef.rst  tips.rst  usage.rst
docs/_static/commands/: apps.rst  dump.rst  load.rst  polymorphic_dumpdata.rst
docs/references/: applications.rst  contrib.rst  core.rst  dump.rst  dumper.rst  handlers.rst  index.rst  loader.rst  serializers.rst  storages.rst
sandbox/: urls.py
sandbox/djangoapp_sample/: admin.py  apps.py  factories.py  models.py
sandbox/djangoapp_sample/migrations/: 0001_initial.py
sandbox/settings/: base.py  demo.py  documentation.py
sandbox/templates/: home.html  skeleton.html
tests/: conftest.py  samples.py  test_dummy.py
tests/0000_base/: 0010_exceptions.py  0011_filesystem.py  0012_djangoapp_sample.py  0012_lists.py  0014_contrib_django_configuration.py
tests/0100_core/: 0100_application_resolver.py  0100_appstore.py  0101_application_models.py  0101_models.py  0102_serializers.py  0110_serializers.py  0110_storages.py  0120_manager_basics.py  0120_storages.py  0121_manager_commands.py  0122_manager_dump_data.py  0123_manager_make_tarball.py  0130_abstract_dump.py  0130_loader_basics.py  0131_loader_deploy_storages.py  0132_loader_deploy_datas.py  0133_loader_deploy.py  0140_abstract_dump.py
tests/0100_core_base/: 0101_applications.py  0102_serializers.py  0110_serializers.py  0110_storages.py
tests/0100_dump/: 0101_models.py  0102_serializers.py  0103_manager.py
tests/0200_core_dumper/: 0210_command.py  0220_basics.py  0221_command.py  0222_data.py  0223_make_archive.py
tests/0200_dumper/: 0200_basics.py  0210_command.py  0230_data.py  0240_make_archive.py  0241_make_script.py
tests/0300_core_loader/: 0310_datas.py  0330_basics.py  0332_datas.py  0333_deploy.py
tests/0300_loader/: 0300_basics.py  0310_open.py  0320_datas.py  0320_storages.py
tests/0400_core_abstracts/: 0440_dump.py
tests/0400_core_handlers/: 0441_load.py
tests/0400_handlers/: 0410_dump.py  0420_load.py
tests/0500_models/: 0501_key.py  0502_dump.py
tests/0600_forms/: 0601_key.py  0602_dump.py
tests/1000_admin/: 1001_key.py  1002_dump.py
tests/1000_commands/: 1010_dump.py
tests/2000_commands/: 2010_dump.py  2020_load.py  2030_apps.py  2100_polymorphic.py
tests/data_fixtures/: advanced_apps.json  basic_apps.json
tests/data_fixtures/data_samples/: blog-sample.json  django-auth.json  django-site.json
tests/data_fixtures/manifest_samples/: basic.json
tests/data_fixtures/storage_samples/storage-1/foo/bar/: bar.nope
tests/data_fixtures/storage_samples/storage-2/pong/: sample.nope
