;;
;; Diskette package
;;
[metadata]
name = diskette
version = 0.4.0-pre.11
description = Export and import Django application data and medias
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Emencia
author_email = support@emencia.com
url = https://github.com/emencia/diskette
project_urls =
    Source Code = https://github.com/emencia/diskette
    Issue Tracker = https://github.com/emencia/diskette/issues
    Changelog = https://diskette.readthedocs.io/en/latest/history.html
    Documentation = https://diskette.readthedocs.io/
license = MIT
keywords = Python,Django
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=4.0
    datalookup>=1.0.0
    requests>=2.32.3
    django-sendfile2>=0.7.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0
    pytest-django>=4.5.2
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
    requests-mock>=1.10.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
    tabulate>=0.9.0
    project-composer>=0.7.0
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{39,311}-django{40,42,51}

[testenv]

deps =
    django40: Django>=4.0,<4.1
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2

commands =
    pip install -e .[dev]
    pytest -v --tb=long tests
